# serializer version: 1
# name: test_all_entities[fake_fan][fan.fake_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.fake_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': None,
    'unique_id': 'f1af21a2-d5a1-437c-b10a-b34a87394b71_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[fake_fan][fan.fake_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Fake fan',
      'percentage': 2000,
      'percentage_step': 33.333333333333336,
      'preset_mode': None,
      'preset_modes': list([
        'auto',
        'low',
        'medium',
        'high',
        'turbo',
      ]),
      'supported_features': <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.fake_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[generic_fan_3_speed][fan.bedroom_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.bedroom_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '6d95a8b7-4ee3-429a-a13a-00ec9354170c_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[generic_fan_3_speed][fan.bedroom_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bedroom Fan',
      'percentage': 0,
      'percentage_step': 33.333333333333336,
      'preset_mode': None,
      'preset_modes': None,
      'supported_features': <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.bedroom_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
